perf/core: Fix ctx_event_type in ctx_resched() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -25122,6 +25122,7 @@
 	patches.suse/dmaengine-rcar-dmac-fix-max_chunk_size-for-R-Car-Gen
 	patches.suse/dmaengine-mv_xor_v2-Fix-clock-resource-by-adding-a-r
 	patches.suse/perf-x86-intel-uncore-fix-skylake-upi-event-format
+	patches.suse/perf-core-fix-ctx_event_type-in-ctx_resched.patch
 	patches.suse/x86-mce-save-microcode-revision-in-machine-check-records.patch
 	patches.suse/x86-mce-serialize-sysfs-changes
 	patches.suse/objtool-Fix-32-bit-build.patch
