--- a/series.conf
+++ b/series.conf
@@ -11733,6 +11733,7 @@
 	patches.suse/0001-futex-Fix-more-put_pi_state-vs.-exit_pi_state_list-r.patch
 	patches.suse/objtool-Prevent-GCC-from-merging-annotate_unreachabl.patch
 	patches.suse/0045-irqchip-irq-mvebu-gicp-Add-missing-spin_lock-init.patch
+	patches.suse/perf-cgroup-fix-perf-cgroup-hierarchy-support.patch
 	patches.suse/tools-headers-Synchronize-kernel-ABI-headers.patch
 	patches.suse/x86-mcelog-get-rid-of-rcu-remnants.patch
 	patches.suse/28-revert-x86-mm-stop-calling-leave_mm-in-idle-code.patch
