perf/core: Fix perf_pmu_unregister() locking (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -40736,6 +40736,7 @@
 	patches.suse/mm-numa-Migrate-pages-to-local-nodes-quicker-early-in-the-lifetime-of-a-task.patch
 	patches.suse/x86-vdso-fix-asm-constraints-on-vdso-syscall-fallbacks
 	patches.suse/x86-vdso-fix-vdso-syscall-fallback-asm-constraint-regression
+	patches.suse/perf-core-fix-perf_pmu_unregister-locking.patch
 	patches.suse/PM-core-Clear-the-direct_complete-flag-on-errors.patch
 	patches.suse/gpiolib-Free-the-last-requested-descriptor.patch
 	patches.suse/0157-dm-thin-metadata-fix-__udivdi3-undefined-on-32-bit.patch
