perf, pt, coresight: Fix address filters for vmas with non-zero offset (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -46623,6 +46623,7 @@
 	patches.suse/x86-cpu-amd-set-the-cpb-bit-unconditionally-on-f17h.patch
 	patches.suse/tools-build-Add-test-reallocarray.c-to-test-all.c-to.patch
 	patches.suse/perf-copy-parent-s-address-filter-offsets-on-clone.patch
+	patches.suse/perf-pt-coresight-fix-address-filters-for-vmas-with-non-zero-offset.patch
 	patches.suse/sched-fair-Add-tmp_alone_branch-assertion.patch
 	patches.suse/sched-fair-Fix-insertion-in-rq-leaf_cfs_rq_list.patch
 	patches.suse/sched-fair-Optimize-update_blocked_averages.patch
