perf/core: Don't WARN() for impossible ring-buffer sizes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -46069,6 +46069,7 @@
 	patches.suse/i2c-omap-Use-noirq-system-sleep-pm-ops-to-idle-devic.patch
 	patches.suse/0001-futex-Handle-early-deadlock-return-correctly.patch
 	patches.suse/perf-x86-intel-delay-memory-deallocation-until-x86_pmu_dead_cpu.patch
+	patches.suse/perf-core-don-t-warn-for-impossible-ring-buffer-sizes.patch
 	patches.suse/irqchip-gic-v3-its-Plug-allocation-race-for-devices-.patch
 	patches.suse/irqchip-gic-v3-its-Gracefully-fail-on-LPI-exhaustion.patch
 	patches.suse/irqchip-mmp-Only-touch-the-PJ4-IRQ-FIQ-bits-on-enabl.patch
