--- a/series.conf
+++ b/series.conf
@@ -46622,6 +46622,7 @@
 	patches.suse/0001-sched-wake_q-Reduce-reference-counting-for-special-u.patch
 	patches.suse/x86-cpu-amd-set-the-cpb-bit-unconditionally-on-f17h.patch
 	patches.suse/tools-build-Add-test-reallocarray.c-to-test-all.c-to.patch
+	patches.suse/perf-copy-parent-s-address-filter-offsets-on-clone.patch
 	patches.suse/sched-fair-Add-tmp_alone_branch-assertion.patch
 	patches.suse/sched-fair-Fix-insertion-in-rq-leaf_cfs_rq_list.patch
 	patches.suse/sched-fair-Optimize-update_blocked_averages.patch
