perf/core: Fix perf_event_read_value() locking (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11907,6 +11907,7 @@
 	patches.suse/locking-x86-Use-LOCK-ADD-for-smp_mb-instead-of-MFENCE.patch
 	patches.suse/kprobes-x86-disable-preemption-in-ftrace-based-jprobes
 	patches.suse/perf-bpf-Extend-the-perf_event_read_local-interface-.patch
+	patches.suse/perf-core-fix-perf_event_read_value-locking.patch
 	patches.suse/perf-core-make-sure-to-update-ctx-time-before-using-it.patch
 	patches.suse/perf-core-rename-enum-perf_event_active_state.patch
 	patches.suse/perf-core-fix-perf_event_read.patch
