perf/core: Fix use-after-free in uprobe_perf_close() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -29712,6 +29712,7 @@
 	patches.suse/powerpc-mm-radix-Fix-checkstops-caused-by-invalid-tl.patch
 	patches.suse/powerpc-64s-Fix-CPU_FTRS_ALWAYS-vs-DT-CPU-features.patch
 	patches.suse/x86-mm-fix-bogus-warning-during-efi-bootup-use-boot_cpu_has-instead-of-this_cpu_has-in-build_cr3_noflush
+	patches.suse/perf-core-fix-use-after-free-in-uprobe_perf_close.patch
 	patches.suse/perf-core-fix-perf_kprobe_init.patch
 	patches.suse/perf-core-fix-perf_uprobe_init.patch
 	patches.suse/0001-tracing-uprobe_event-Fix-strncpy-corner-case.patch
