resolve KABI warning for perf-pt-coresight (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54618,6 +54618,8 @@
 
 	patches.kabi/NFSv4-Fix-OPEN-CLOSE-race.patch
 
+	patches.kabi/perf-pt-coresight-fix-address-filters-for-vmas-with-non-zero-offset-kabi.patch
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
