perf/core: Add sanity check to deal with pinned event failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -40604,6 +40604,7 @@
 	patches.suse/Input-atakbd-fix-Atari-keymap.patch
 	patches.suse/Input-atakbd-fix-Atari-CapsLock-behaviour.patch
 	patches.suse/Input-elantech-enable-middle-button-of-touchpad-on-T.patch
+	patches.suse/perf-core-add-sanity-check-to-deal-with-pinned-event-failure.patch
 	patches.suse/clocksource-drivers-ti-32k-Add-CLOCK_SOURCE_SUSPEND_.patch
 	patches.suse/clocksource-drivers-timer-atmel-pit-Properly-handle-.patch
 	patches.suse/x86-boot-fix-kexec-booting-failure-in-the-sev-bit-detection-code.patch
