perf: Allocate context task_ctx_data for child event (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -19888,6 +19888,7 @@
 	patches.suse/0001-locking-Remove-smp_read_barrier_depends-from-queued_.patch
 	patches.suse/drivers-infiniband-Remove-now-redundant-smp_read_bar.patch
 	patches.suse/drivers-dma-ioat-Remove-now-redundant-smp_read_barri.patch
+	patches.suse/perf-allocate-context-task_ctx_data-for-child-event.patch
 	patches.suse/tools-lib-traceevent-Simplify-pointer-print-logic-an.patch
 	patches.suse/tools-lib-traceevent-Fix-get_field_str-for-dynamic-s.patch
 	patches.suse/x86-mce-amd-define-a-function-to-get-smca-bank-type
