perf: Fix header.size for namespace events (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -18389,6 +18389,7 @@
 	patches.suse/efi-Move-some-sysfs-files-to-be-read-only-by-root.patch
 	patches.suse/efi-esrt-Use-memunmap-instead-of-kfree-to-free-the-r
 	patches.suse/perf-core-fix-memory-leak-triggered-by-perf-namespace.patch
+	patches.suse/perf-fix-header-size-for-namespace-events.patch
 	patches.suse/0029-tools-headers-Synchronize-perf_event.h-header.patch
 	patches.suse/sched-wait-fix-add_wait_queue-behavior-change.patch
 	patches.suse/sched-fair-Update-and-fix-the-runnable-propagation-rule.patch
