--- a/series.conf
+++ b/series.conf
@@ -1178,6 +1178,7 @@
 	patches.suse/0001-locking-rtmutex-Don-t-initialize-lockdep-when-not-re.patch
 	patches.suse/0001-locking-refcount-Create-unchecked-atomic_t-implement.patch
 	patches.suse/perf-x86-add-sysfs-entry-to-freeze-counters-on-smi.patch
+	patches.suse/perf-core-fix-error-handling-in-perf_event_alloc.patch
 	patches.suse/tools-Adopt-__noreturn-from-kernel-sources.patch
 	patches.suse/tools-Adopt-__printf-from-kernel-sources.patch
 	patches.suse/tools-Adopt-__scanf-from-kernel-sources.patch
