perf/core: Fix lock inversion between perf,trace,cpuhp (git-fixes (dependent patch for 18736eef1213)).

--- a/series.conf
+++ b/series.conf
@@ -19413,6 +19413,7 @@
 	patches.suse/net-vrf-Add-support-for-sends-to-local-broadcast-add.patch
 	patches.suse/dccp-don-t-restart-ccid2_hc_tx_rto_expire-if-sk-in-c.patch
 	patches.suse/0002-futex-Fix-OWNER_DEAD-fixup.patch
+	patches.suse/perf-core-fix-lock-inversion-between-perf-trace-cpuhp.patch
 	patches.suse/perf-core-fix-another-perf-trace-cpuhp-lock-inversion.patch
 	patches.suse/sched-core-Fix-cpu.max-vs.-cpuhotplug-deadlock.patch
 	patches.suse/hrtimer-Reset-hrtimer-cpu-base-proper-on-CPU-hotplug.patch
