--- a/series.conf
+++ b/series.conf
@@ -49485,6 +49485,7 @@
 	patches.suse/efi-bgrt-Drop-BGRT-status-field-reserved-bits-check.patch
 	patches.suse/irqchip-gic-v3-its-Fix-command-queue-pointer-compari.patch
 	patches.suse/perf-core-fix-perf_sample_regs_user-mm-check.patch
+	patches.suse/perf-ioctl-add-check-for-the-sample_period-value.patch
 	patches.suse/x86-microcode-fix-the-microcode-load-on-cpu-hotplug-for-real.patch
 	patches.suse/x86-speculation-allow-guests-to-use-ssbd-even-if-host-does-not.patch
 	patches.suse/cpu-speculation-warn-on-unsupported-mitigations-parameter.patch
