perf/core: Restore mmap record type correctly (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -47448,6 +47448,7 @@
 	patches.suse/irqchip-mbigen-Don-t-clear-eventid-when-freeing-an-M.patch
 	patches.suse/0001-futex-Ensure-that-futex-address-is-aligned-in-handle.patch
 	patches.suse/msft-hv-1856-x86-hyperv-Prevent-potential-NULL-pointer-dereferenc.patch
+	patches.suse/perf-core-restore-mmap-record-type-correctly.patch
 	patches.suse/ext4-fix-NULL-pointer-dereference-while-journal-is-a.patch
 	patches.suse/ext4-fix-data-corruption-caused-by-unaligned-direct-.patch
 	patches.suse/ext4-Avoid-panic-during-forced-reboot.patch
