perf: Return proper values for user stack errors (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -29843,6 +29843,7 @@
 	patches.suse/trace_kprobe-remove-warning-message-could-not-insert-probe-at.patch
 	patches.suse/tools-headers-Synchronize-kernel-ABI-headers-v4.17-r.patch
 	patches.suse/perf-core-store-context-switch-out-type-in-perf_record_switch.patch
+	patches.suse/perf-return-proper-values-for-user-stack-errors.patch
 	patches.suse/x86-tsc-prevent-32bit-truncation-in-calc_hpet_ref
 	patches.suse/x86-acpi-prevent-x2apic-id-0xffffffff-from-being-accounted
 	patches.suse/x86-sched-allow-topologies-where-numa-nodes-share-an-llc.patch
