btrfs: reloc: fix reloc root leak and NULL pointer  dereference (bsc#1171417 bsc#1160947 bsc#1172366).

--- a/series.conf
+++ b/series.conf
@@ -27568,6 +27568,7 @@
 	patches.suse/ALSA-usb-audio-mixer-volume-quirk-for-ESS-Technology.patch
 	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC287.patch
 	patches.suse/drivers-net-ibmvnic-Update-VNIC-protocol-version-rep.patch
+	patches.suse/0001-btrfs-reloc-fix-reloc-root-leak-and-NULL-pointer-der.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
