l2tp: Allow management of tunnels and session in user namespace (networking-stable-20_04_17).

--- a/series.conf
+++ b/series.conf
@@ -27421,6 +27421,7 @@
 	patches.suse/net-ipv6-do-not-consider-routes-via-gateways-for-any.patch
 	patches.suse/net-revert-default-NAPI-poll-timeout-to-2-jiffies.patch
 	patches.suse/hsr-check-protocol-version-in-hsr_newlink.patch
+	patches.suse/l2tp-Allow-management-of-tunnels-and-session-in-user.patch
 	patches.suse/mac80211_hwsim-Use-kstrndup-in-place-of-kasprintf.patch
 	patches.suse/ALSA-ctxfi-Remove-unnecessary-cast-in-kfree.patch
 	patches.suse/ALSA-usb-audio-Don-t-override-ignore_ctl_error-value.patch
