--- a/series.conf
+++ b/series.conf
@@ -27418,6 +27418,7 @@
 	patches.suse/smb3-change-noisy-error-message-to-FYI.patch
 	patches.suse/smb3-enable-swap-on-SMB3-mounts.patch
 	patches.suse/tracing-fix-the-race-between-registering-snapshot-event-trigger-and-triggering-snapshot-operation.patch
+	patches.suse/net-ipv6-do-not-consider-routes-via-gateways-for-any.patch
 	patches.suse/mac80211_hwsim-Use-kstrndup-in-place-of-kasprintf.patch
 	patches.suse/ALSA-ctxfi-Remove-unnecessary-cast-in-kfree.patch
 	patches.suse/ALSA-usb-audio-Don-t-override-ignore_ctl_error-value.patch
