--- a/series.conf
+++ b/series.conf
@@ -27422,6 +27422,7 @@
 	patches.suse/net-revert-default-NAPI-poll-timeout-to-2-jiffies.patch
 	patches.suse/hsr-check-protocol-version-in-hsr_newlink.patch
 	patches.suse/l2tp-Allow-management-of-tunnels-and-session-in-user.patch
+	patches.suse/net-ipv4-devinet-Fix-crash-when-add-del-multicast-IP.patch
 	patches.suse/mac80211_hwsim-Use-kstrndup-in-place-of-kasprintf.patch
 	patches.suse/ALSA-ctxfi-Remove-unnecessary-cast-in-kfree.patch
 	patches.suse/ALSA-usb-audio-Don-t-override-ignore_ctl_error-value.patch
