team: fix hang in team_mode_get() (networking-stable-20_04_27).

--- a/series.conf
+++ b/series.conf
@@ -27455,6 +27455,7 @@
 	patches.suse/wimax-i2400m-Fix-potential-urb-refcnt-leak.patch
 	patches.suse/net-mlx4_en-avoid-indirect-call-in-TX-completion.patch
 	patches.suse/tcp-cache-line-align-MAX_TCP_HEADER.patch
+	patches.suse/team-fix-hang-in-team_mode_get.patch
 	patches.suse/macvlan-fix-null-dereference-in-macvlan_device_event.patch
 	patches.suse/iwlwifi-pcie-actually-release-queue-memory-in-TVQM.patch
 	patches.suse/macsec-avoid-to-set-wrong-mtu.patch
