net/mlx4_en: avoid indirect call in TX completion (networking-stable-20_04_27).

--- a/series.conf
+++ b/series.conf
@@ -27453,6 +27453,7 @@
 	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC245.patch
 	patches.suse/net-netrom-Fix-potential-nr_neigh-refcnt-leak-in-nr_.patch
 	patches.suse/wimax-i2400m-Fix-potential-urb-refcnt-leak.patch
+	patches.suse/net-mlx4_en-avoid-indirect-call-in-TX-completion.patch
 	patches.suse/macvlan-fix-null-dereference-in-macvlan_device_event.patch
 	patches.suse/iwlwifi-pcie-actually-release-queue-memory-in-TVQM.patch
 	patches.suse/macsec-avoid-to-set-wrong-mtu.patch
