--- a/series.conf
+++ b/series.conf
@@ -27458,6 +27458,7 @@
 	patches.suse/team-fix-hang-in-team_mode_get.patch
 	patches.suse/macvlan-fix-null-dereference-in-macvlan_device_event.patch
 	patches.suse/xfrm-Always-set-XFRM_TRANSFORMED-in-xfrm-4-6-_output.patch
+	patches.suse/vrf-Check-skb-for-XFRM_TRANSFORMED-flag.patch
 	patches.suse/iwlwifi-pcie-actually-release-queue-memory-in-TVQM.patch
 	patches.suse/macsec-avoid-to-set-wrong-mtu.patch
 	patches.suse/powerpc-setup_64-Set-cache-line-size-based-on-cache-.patch
