net: netrom: Fix potential nr_neigh refcnt leak in nr_add_node (networking-stable-20_04_27).

--- a/series.conf
+++ b/series.conf
@@ -27451,6 +27451,7 @@
 	patches.suse/ASoC-dapm-fixup-dapm-kcontrol-widget.patch
 	patches.suse/ALSA-usb-audio-Fix-usb-audio-refcnt-leak-when-gettin.patch
 	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC245.patch
+	patches.suse/net-netrom-Fix-potential-nr_neigh-refcnt-leak-in-nr_.patch
 	patches.suse/wimax-i2400m-Fix-potential-urb-refcnt-leak.patch
 	patches.suse/macvlan-fix-null-dereference-in-macvlan_device_event.patch
 	patches.suse/iwlwifi-pcie-actually-release-queue-memory-in-TVQM.patch
