net: bcmgenet: correct per TX/RX ring statistics (networking-stable-20_04_27).

--- a/series.conf
+++ b/series.conf
@@ -27463,6 +27463,7 @@
 	patches.suse/net-dsa-b53-Rework-ARL-bin-logic.patch
 	patches.suse/mlxsw-Fix-some-IS_ERR-vs-NULL-bugs.patch
 	patches.suse/net-x25-Fix-x25_neigh-refcnt-leak-when-receiving-fra.patch
+	patches.suse/net-bcmgenet-correct-per-TX-RX-ring-statistics.patch
 	patches.suse/iwlwifi-pcie-actually-release-queue-memory-in-TVQM.patch
 	patches.suse/macsec-avoid-to-set-wrong-mtu.patch
 	patches.suse/powerpc-setup_64-Set-cache-line-size-based-on-cache-.patch
