- debugfs_lookup(): switch to lookup_one_len_unlocked()   (bsc#1171979). - Refresh patches.suse/new-helper-lookup_positive_unlocked.patch.

--- a/series.conf
+++ b/series.conf
@@ -28131,6 +28131,7 @@
 	patches.suse/0003-ipc-msg-Fix-msgctl-.-IPC_STAT-.-between-pid-namespac.patch
 	patches.suse/0004-ipc-sem-Fix-semctl-.-GETPID-.-between-pid-namespaces.patch
 	patches.suse/0005-ipc-shm-Fix-pid-freeing.patch
+	patches.suse/debugfs_lookup-switch-to-lookup_one_len_unlocked.patch
 	patches.suse/xfs-Remove-dead-code-from-inode-recover-function.patch
 	patches.suse/xfs-fix-transaction-allocation-deadlock-in-IO-path.patch
 	patches.suse/xfs-Correctly-invert-xfs_buftarg-LRU-isolation-logic.patch
