agp/intel: Reinforce the barrier after GTT updates (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -27581,6 +27581,7 @@
 	patches.suse/mmc-sdhci-msm-Clear-tuning-done-flag-while-hs400-tun.patch
 	patches.suse/ACPI-sysfs-Fix-reference-count-leak-in-acpi_sysfs_ad.patch
 	patches.suse/ACPI-CPPC-Fix-reference-count-leak-in-acpi_cppc_proc.patch
+	patches.suse/agp-intel-Reinforce-the-barrier-after-GTT-updates.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
