--- a/series.conf
+++ b/series.conf
@@ -27544,6 +27544,7 @@
 	patches.suse/x86-unwind-orc-fix-error-handling-in-_unwind_start.patch
 	patches.suse/usb-gadget-audio-Fix-a-missing-error-return-value-in.patch
 	patches.suse/usb-gadget-net2272-Fix-a-memory-leak-in-an-error-han.patch
+	patches.suse/usb-gadget-legacy-fix-redundant-initialization-warni.patch
 	patches.suse/usb-gadget-legacy-fix-error-return-code-in-cdc_bind.patch
 	patches.suse/usb-gadget-legacy-fix-error-return-code-in-gncm_bind.patch
 	patches.suse/usb-xhci-Fix-NULL-pointer-dereference-when-enqueuing.patch
