--- a/series.conf
+++ b/series.conf
@@ -27565,6 +27565,7 @@
 	patches.suse/iio-sca3000-Remove-an-erroneous-get_device.patch
 	patches.suse/mei-release-me_cl-object-reference.patch
 	patches.suse/x86-unwind-orc-fix-unwind_get_return_address_ptr-for-inactive-tasks.patch
+	patches.suse/Input-usbtouchscreen-add-support-for-BonXeon-TP.patch
 	patches.suse/Input-synaptics-rmi4-really-fix-attn_data-use-after-.patch
 	patches.suse/fs-binfmt_elf.c-allocate-initialized-memory-in-fill_.patch
 	patches.suse/ALSA-hwdep-fix-a-left-shifting-1-by-31-UB-bug.patch
