--- a/series.conf
+++ b/series.conf
@@ -27531,6 +27531,7 @@
 	patches.suse/x86-unwind-orc-don-t-skip-the-first-frame-for-inactive-tasks.patch
 	patches.suse/x86-unwind-orc-prevent-unwinding-before-orc-initialization.patch
 	patches.suse/x86-unwind-orc-fix-error-path-for-bad-orc-entry-type.patch
+	patches.suse/gpio-tegra-mask-GPIO-IRQs-during-IRQ-shutdown.patch
 	patches.suse/0002-drm-i915-gvt-Init-DPLL-DDI-vreg-for-virtual-display-.patch
 	patches.suse/ALSA-usb-audio-Add-control-message-quirk-delay-for-K.patch
 	patches.suse/Revert-ALSA-hda-realtek-Fix-pop-noise-on-ALC225.patch
