--- a/series.conf
+++ b/series.conf
@@ -27583,6 +27583,7 @@
 	patches.suse/ACPI-CPPC-Fix-reference-count-leak-in-acpi_cppc_proc.patch
 	patches.suse/agp-intel-Reinforce-the-barrier-after-GTT-updates.patch
 	patches.suse/drm-dp_mst-Reformat-drm_dp_check_act_status-a-bit.patch
+	patches.suse/video-fbdev-w100fb-Fix-a-potential-double-free.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
