--- a/series.conf
+++ b/series.conf
@@ -27578,6 +27578,7 @@
 	patches.suse/drivers-net-ibmvnic-Update-VNIC-protocol-version-rep.patch
 	patches.suse/mmc-sdio-Fix-potential-NULL-pointer-error-in-mmc_sdi.patch
 	patches.suse/mmc-sdhci-esdhc-imx-fix-the-mask-for-tuning-start-po.patch
+	patches.suse/mmc-sdhci-msm-Clear-tuning-done-flag-while-hs400-tun.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
