ACPI: sysfs: Fix reference count leak in acpi_sysfs_add_hotplug_profile() (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -27579,6 +27579,7 @@
 	patches.suse/mmc-sdio-Fix-potential-NULL-pointer-error-in-mmc_sdi.patch
 	patches.suse/mmc-sdhci-esdhc-imx-fix-the-mask-for-tuning-start-po.patch
 	patches.suse/mmc-sdhci-msm-Clear-tuning-done-flag-while-hs400-tun.patch
+	patches.suse/ACPI-sysfs-Fix-reference-count-leak-in-acpi_sysfs_ad.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
