--- a/series.conf
+++ b/series.conf
@@ -27567,6 +27567,7 @@
 	patches.suse/x86-unwind-orc-fix-unwind_get_return_address_ptr-for-inactive-tasks.patch
 	patches.suse/Input-usbtouchscreen-add-support-for-BonXeon-TP.patch
 	patches.suse/Input-evdev-call-input_flush_device-on-release-not-f.patch
+	patches.suse/Input-xpad-add-custom-init-packet-for-Xbox-One-S-con.patch
 	patches.suse/Input-synaptics-rmi4-really-fix-attn_data-use-after-.patch
 	patches.suse/fs-binfmt_elf.c-allocate-initialized-memory-in-fill_.patch
 	patches.suse/ALSA-hwdep-fix-a-left-shifting-1-by-31-UB-bug.patch
