--- a/series.conf
+++ b/series.conf
@@ -27582,6 +27582,7 @@
 	patches.suse/ACPI-sysfs-Fix-reference-count-leak-in-acpi_sysfs_ad.patch
 	patches.suse/ACPI-CPPC-Fix-reference-count-leak-in-acpi_cppc_proc.patch
 	patches.suse/agp-intel-Reinforce-the-barrier-after-GTT-updates.patch
+	patches.suse/drm-dp_mst-Reformat-drm_dp_check_act_status-a-bit.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
