--- a/series.conf
+++ b/series.conf
@@ -27580,6 +27580,7 @@
 	patches.suse/mmc-sdhci-esdhc-imx-fix-the-mask-for-tuning-start-po.patch
 	patches.suse/mmc-sdhci-msm-Clear-tuning-done-flag-while-hs400-tun.patch
 	patches.suse/ACPI-sysfs-Fix-reference-count-leak-in-acpi_sysfs_ad.patch
+	patches.suse/ACPI-CPPC-Fix-reference-count-leak-in-acpi_cppc_proc.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
