--- a/series.conf
+++ b/series.conf
@@ -27577,6 +27577,7 @@
 	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC287.patch
 	patches.suse/drivers-net-ibmvnic-Update-VNIC-protocol-version-rep.patch
 	patches.suse/mmc-sdio-Fix-potential-NULL-pointer-error-in-mmc_sdi.patch
+	patches.suse/mmc-sdhci-esdhc-imx-fix-the-mask-for-tuning-start-po.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
