--- a/series.conf
+++ b/series.conf
@@ -27568,6 +27568,7 @@
 	patches.suse/Input-usbtouchscreen-add-support-for-BonXeon-TP.patch
 	patches.suse/Input-evdev-call-input_flush_device-on-release-not-f.patch
 	patches.suse/Input-xpad-add-custom-init-packet-for-Xbox-One-S-con.patch
+	patches.suse/Input-i8042-add-ThinkPad-S230u-to-i8042-reset-list.patch
 	patches.suse/Input-synaptics-rmi4-really-fix-attn_data-use-after-.patch
 	patches.suse/fs-binfmt_elf.c-allocate-initialized-memory-in-fill_.patch
 	patches.suse/ALSA-hwdep-fix-a-left-shifting-1-by-31-UB-bug.patch
