Following two patches needs to be combined as one commit (one adds context, later removes which affects existing patch) else commit series cannot be sequenced.
- perf/core: Fix locking for children siblings group read
  (git-fixes).
- perf/core: Fix __perf_read_group_add() locking (git-fixes
  (dependent patch)).

--- a/series.conf
+++ b/series.conf
@@ -5777,6 +5777,7 @@
 	patches.suse/bpf-more-tests-for-mixed-signed-and-unsigned-bounds-.patch
 	patches.suse/0001-locking-rtmutex-Remove-unnecessary-priority-adjustme.patch
 	patches.suse/perf-x86-intel-add-goldmont-plus-cpu-pmu-support.patch
+	patches.suse/perf-core-fix-locking-for-children-siblings-group-read.patch
 	patches.suse/x86-platform-uv-bau-fix-congested_response_us-not-taking-effect
 	patches.suse/18.1-x86-mm-kvm-fix-warning-when-config_preempt_count.patch
 	patches.suse/x86-platform-uv-bau-disable-bau-on-single-hub-configurations
@@ -11908,6 +11909,7 @@
 	patches.suse/kprobes-x86-disable-preemption-in-ftrace-based-jprobes
 	patches.suse/perf-bpf-Extend-the-perf_event_read_local-interface-.patch
 	patches.suse/perf-core-fix-perf_event_read_value-locking.patch
+	patches.suse/perf-core-fix-_perf_read_group_add-locking.patch
 	patches.suse/perf-core-make-sure-to-update-ctx-time-before-using-it.patch
 	patches.suse/perf-core-rename-enum-perf_event_active_state.patch
 	patches.suse/perf-core-fix-perf_event_read.patch
