perf/core: Fix the address filtering fix (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -47844,6 +47844,7 @@
 	patches.suse/sc16is7xx-put-err_spi-and-err_i2c-into-correct-ifdef.patch
 	patches.suse/device_cgroup-fix-RCU-imbalance-in-error-case.patch
 	patches.suse/x86-speculation-prevent-deadlock-on-ssb_state-lock.patch
+	patches.suse/perf-core-fix-the-address-filtering-fix.patch
 	patches.suse/0001-tools-lib-traceevent-Fix-missing-equality-check-for-.patch
 	patches.suse/perf-x86-amd-add-event-map-for-amd-family-17h.patch
 	patches.suse/ALSA-hda-Initialize-power_state-field-properly.patch
