--- a/series.conf
+++ b/series.conf
@@ -50081,6 +50081,7 @@
 	patches.suse/powerpc-mm-Handle-page-table-allocation-failures.patch
 	patches.suse/powerpc-module64-Fix-comment-in-R_PPC64_ENTRY-handli.patch
 	patches.suse/powerpc-irq-Don-t-WARN-continuously-in-arch_local_ir.patch
+	patches.suse/perf-core-fix-race-between-close-and-fork.patch
 	patches.suse/perf-core-fix-exclusive-events-grouping.patch
 	patches.suse/mailbox-handle-failed-named-mailbox-channel-request.patch
 	patches.suse/platform-x86-asus-wmi-Only-Tell-EC-the-OS-will-handl.patch
