perf/core: Fix impossible ring-buffer sizes warning (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -46144,6 +46144,7 @@
 	patches.suse/Input-elan_i2c-add-ACPI-ID-for-touchpad-in-Lenovo-V3.patch
 	patches.suse/i2c-cadence-Fix-the-hold-bit-setting.patch
 	patches.suse/i2c-bcm2835-Clear-current-buffer-pointers-and-counts.patch
+	patches.suse/perf-core-fix-impossible-ring-buffer-sizes-warning.patch
 	patches.suse/x86-a-out-clear-the-dump-structure-initially.patch
 	patches.suse/x86-CPU-Add-Icelake-model-number.patch
 	patches.suse/x86-platform-uv-use-efi_runtime_lock-to-serialise-bios-calls
