--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1530,3 +1530,5 @@ c7fc46fd1410a7452db29ee8cd1f85c233000ec9 # kABI, the point is removing a global 
 9a7f12edf8848a9b355a86fc0183d7be932ef11e # cleanup
 a6aacb2b26e85aa619cf0c6f98d0ca77314cd2a1 # no changes: drm/amdgpu: force fbdev into vram
 f058599e22d59e594e5aae1dc10560568d8f4a8b # depends on 0aaba41b58bc5f3074c0c0a6136b9500b5e29e19, which cannot be backported
+742015ff12ae27324b8ad2d28e43da6743529bad # duplicate of 34900ec5c9577cc1b0f22887ac7349f458ba8ac2
+4a31b424ac0656d1bb17520ee861144fe7a19664 # duplicate of 0e18dd12064e07519f7cbff4149ca7fff620cbed
