media: platform: fcp: Set appropriate DMA parameters (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -27602,6 +27602,7 @@
 	patches.suse/mwifiex-Fix-memory-corruption-in-dump_station.patch
 	patches.suse/wcn36xx-Fix-error-handling-path-in-wcn36xx_probe.patch
 	patches.suse/media-dvb-return-EREMOTEIO-on-i2c-transfer-failure.patch
+	patches.suse/media-platform-fcp-Set-appropriate-DMA-parameters.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
