--- a/series.conf
+++ b/series.conf
@@ -27596,6 +27596,7 @@
 	patches.suse/0001-btrfs-reloc-fix-reloc-root-leak-and-NULL-pointer-der.patch
 	patches.suse/0002-btrfs-reloc-clear-DEAD_RELOC_TREE-bit-for-orphan-roo.patch
 	patches.suse/clocksource-dw_apb_timer_of-Fix-missing-clockevent-t.patch
+	patches.suse/b43legacy-Fix-case-where-channel-status-is-corrupted.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
