wcn36xx: Fix error handling path in 'wcn36xx_probe()' (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -27600,6 +27600,7 @@
 	patches.suse/mwifiex-avoid-Wstringop-overflow-warning.patch
 	patches.suse/rtlwifi-Fix-a-double-free-in-_rtl_usb_tx_urb_setup.patch
 	patches.suse/mwifiex-Fix-memory-corruption-in-dump_station.patch
+	patches.suse/wcn36xx-Fix-error-handling-path-in-wcn36xx_probe.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
