--- a/series.conf
+++ b/series.conf
@@ -27601,6 +27601,7 @@
 	patches.suse/rtlwifi-Fix-a-double-free-in-_rtl_usb_tx_urb_setup.patch
 	patches.suse/mwifiex-Fix-memory-corruption-in-dump_station.patch
 	patches.suse/wcn36xx-Fix-error-handling-path-in-wcn36xx_probe.patch
+	patches.suse/media-dvb-return-EREMOTEIO-on-i2c-transfer-failure.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
