mac80211: mesh: fix discovery timer re-arming issue / crash (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -27582,6 +27582,7 @@
 	patches.suse/ALSA-usb-audio-mixer-volume-quirk-for-ESS-Technology.patch
 	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC287.patch
 	patches.suse/iommu-fix-reference-count-leak-in-iommu_group_alloc
+	patches.suse/mac80211-mesh-fix-discovery-timer-re-arming-issue-cr.patch
 	patches.suse/drivers-net-ibmvnic-Update-VNIC-protocol-version-rep.patch
 	patches.suse/mmc-sdio-Fix-potential-NULL-pointer-error-in-mmc_sdi.patch
 	patches.suse/mmc-sdhci-esdhc-imx-fix-the-mask-for-tuning-start-po.patch
