--- a/series.conf
+++ b/series.conf
@@ -27599,6 +27599,7 @@
 	patches.suse/b43legacy-Fix-case-where-channel-status-is-corrupted.patch
 	patches.suse/mwifiex-avoid-Wstringop-overflow-warning.patch
 	patches.suse/rtlwifi-Fix-a-double-free-in-_rtl_usb_tx_urb_setup.patch
+	patches.suse/mwifiex-Fix-memory-corruption-in-dump_station.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
