rtlwifi: Fix a double free in _rtl_usb_tx_urb_setup() (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -27598,6 +27598,7 @@
 	patches.suse/clocksource-dw_apb_timer_of-Fix-missing-clockevent-t.patch
 	patches.suse/b43legacy-Fix-case-where-channel-status-is-corrupted.patch
 	patches.suse/mwifiex-avoid-Wstringop-overflow-warning.patch
+	patches.suse/rtlwifi-Fix-a-double-free-in-_rtl_usb_tx_urb_setup.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
