mwifiex: avoid -Wstringop-overflow warning (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -27597,6 +27597,7 @@
 	patches.suse/0002-btrfs-reloc-clear-DEAD_RELOC_TREE-bit-for-orphan-roo.patch
 	patches.suse/clocksource-dw_apb_timer_of-Fix-missing-clockevent-t.patch
 	patches.suse/b43legacy-Fix-case-where-channel-status-is-corrupted.patch
+	patches.suse/mwifiex-avoid-Wstringop-overflow-warning.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
