--- a/series.conf
+++ b/series.conf
@@ -27046,6 +27046,7 @@
 	patches.suse/0001-drm-i915-selftests-Fix-return-in-assert_mmap_offset.patch
 	patches.suse/fat-fix-uninit-memory-access-for-partial-initialized.patch
 	patches.suse/hwmon-adt7462-Fix-an-error-return-in-ADT7462_REG_VOL.patch
+	patches.suse/spi-qup-call-spi_qup_pm_resume_runtime-before-suspen.patch
 	patches.suse/0001-vgacon-Fix-a-UAF-in-vgacon_invert_region.patch
 	patches.suse/ASoC-pcm-Fix-possible-buffer-overflow-in-dpcm-state-.patch
 	patches.suse/ASoC-topology-Fix-memleak-in-soc_tplg_link_elems_loa.patch
