--- a/series.conf
+++ b/series.conf
@@ -27590,6 +27590,7 @@
 	patches.suse/NFC-st21nfca-add-missed-kfree_skb-in-an-error-path.patch
 	patches.suse/drivers-net-ibmvnic-Update-VNIC-protocol-version-rep.patch
 	patches.suse/spi-bcm-qspi-when-tx-rx-buffer-is-NULL-set-to-0.patch
+	patches.suse/spi-dw-Zero-DMA-Tx-and-Rx-configurations-on-stack.patch
 	patches.suse/mmc-sdio-Fix-potential-NULL-pointer-error-in-mmc_sdi.patch
 	patches.suse/mmc-sdhci-esdhc-imx-fix-the-mask-for-tuning-start-po.patch
 	patches.suse/mmc-sdhci-msm-Clear-tuning-done-flag-while-hs400-tun.patch
