--- a/series.conf
+++ b/series.conf
@@ -27047,6 +27047,7 @@
 	patches.suse/fat-fix-uninit-memory-access-for-partial-initialized.patch
 	patches.suse/hwmon-adt7462-Fix-an-error-return-in-ADT7462_REG_VOL.patch
 	patches.suse/spi-qup-call-spi_qup_pm_resume_runtime-before-suspen.patch
+	patches.suse/spi-pxa2xx-Add-CS-control-clock-quirk.patch
 	patches.suse/0001-vgacon-Fix-a-UAF-in-vgacon_invert_region.patch
 	patches.suse/ASoC-pcm-Fix-possible-buffer-overflow-in-dpcm-state-.patch
 	patches.suse/ASoC-topology-Fix-memleak-in-soc_tplg_link_elems_loa.patch
