--- a/series.conf
+++ b/series.conf
@@ -27049,6 +27049,7 @@
 	patches.suse/spi-qup-call-spi_qup_pm_resume_runtime-before-suspen.patch
 	patches.suse/spi-pxa2xx-Add-CS-control-clock-quirk.patch
 	patches.suse/spi-zynqmp-remove-entry-that-causes-a-cs-glitch.patch
+	patches.suse/spi-bcm63xx-hsspi-Really-keep-pll-clk-enabled.patch
 	patches.suse/0001-vgacon-Fix-a-UAF-in-vgacon_invert_region.patch
 	patches.suse/ASoC-pcm-Fix-possible-buffer-overflow-in-dpcm-state-.patch
 	patches.suse/ASoC-topology-Fix-memleak-in-soc_tplg_link_elems_loa.patch
