--- a/series.conf
+++ b/series.conf
@@ -53872,6 +53872,7 @@
 	patches.suse/rtlwifi-Fix-a-double-free-in-_rtl_usb_tx_urb_setup.patch
 	patches.suse/mwifiex-Fix-memory-corruption-in-dump_station.patch
 	patches.suse/wcn36xx-Fix-error-handling-path-in-wcn36xx_probe.patch
+	patches.suse/ipv6-fix-IPV6_ADDRFORM-operation-logic.patch
 	patches.suse/media-dvb-return-EREMOTEIO-on-i2c-transfer-failure.patch
 	patches.suse/media-platform-fcp-Set-appropriate-DMA-parameters.patch
 
